--- a/source/courses/cmps530/weeks/week12-13.md
+++ b/source/courses/cmps530/weeks/week12-13.md
@@ -6,7 +6,9 @@ There is a lot of reading over the next two weeks - much of which is focused on 
 
 ## Videos
 - TBD
-
+- Graph?
+- Stochastic Processes
+- Normal Distribution
 
 ## Reading (Python)
 - **Guttag**:  Chapters 12-21
